wordpress-volumes/wordpress-01-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-volumes
  labels:
    name: wordpress-volumes
